attemped fix of header bg on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,7 @@
 /**
  * Site header
  */
-.site-header {
+ .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
@@ -11,9 +11,11 @@
 
 }
 .home-header {
-    background:url(/../img/a.png) fixed; 
-    background-size:cover;
-    background-position:center;
+    background:url(/../img/a.png) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     text-align:center;
     margin: 0;
     padding-bottom:1.5rem;
@@ -108,7 +110,7 @@
 /**
  * Site footer
  */
-.site-footer {
+ .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
@@ -169,7 +171,7 @@
 /**
  * Page content
  */
-.page-content {
+ .page-content {
     padding: $spacing-unit 0;
 }
 
@@ -201,7 +203,7 @@
 /**
  * Posts
  */
-.post-header {
+ .post-header {
     margin-bottom: $spacing-unit;
 }
 
